fdo#60889: FILEOPEN: Incorrect opening XLSX file (sharedStrings.xml)

Change-Id: I2fc39999ecdb13eecc28e012debdeda811e98581